5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1800_2571.log
== TEST (2019-06-11 22:28:41) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(n):
	if(x!="a")or(x!="A"):
		x = x + "a"
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:28:54) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(n):
	if(x!="a")or(x!="A"):
		x = x + "a"
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:29:12) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in len(x):
	if(x!="a")or(x!="A"):
		x = x + "a"
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:35:36) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in lens(x):
	if(x!="a")or(x!="A"):
		x = x[i]+""
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:36:18) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in lens(x):
	if(x!="a")or(x!="A"):
		x = x[i]+""
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:36:42) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in len(x):
	if(x!="a")or(x!="A"):
		x = x[i]+""
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:37:20) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x = x[i]+""
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:38:30) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x = x[i;i+1]
print(x)
-- ERROR:
File "XXXX", line 5
    x = x[i;i+1]
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:38:47) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x = x[i:i-1]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:39:22) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = ""
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:39:50) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = x[i]-""
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:40:11) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = x[""]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:40:43) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = x[i-""]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:45:59) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i]= ""
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:46:25) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = ""
	else:
		x=x+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:46:29) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = ""
	else:
		x=x+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:46:43) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = " "
	else:
		x=x+1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:54:52) 
-- CODE:
from numpy import*
x = input("digite a string: ")
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = ''
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:57:10) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		x[i] = x[i]+ y
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:58:19) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		y = x[i]+ y
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:58:47) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		y = x[i]+ y
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:59:14) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		y = y +x[i]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:59:46) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		y = y +x[i]
	else:
		y = y
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:00:09) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x!="a")or(x!="A"):
		y = y +x[i]
	else:
		y = y x[i+1]
print(y)
-- ERROR:
File "XXXX", line 8
    y = y x[i+1]
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:01:42) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	for i in range(len(x)):
		if(x!="a")or(x!="A"):
			y = y +x[i]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:03:54) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")or(x[i]!="a"
		y = y +x[i]
print(y)
-- ERROR:
File "XXXX", line 6
    y = y +x[i]
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:04:25) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")or(x[i]!="a"):
		y = y + x[i]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:04:35) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")or(x[i]!="a"):
		y = y + x[i]
print(y)
-- EXECUTION TIME:
1.12487
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:05:11) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")or(x[i]!="a"):
		y = y + x[i]
	else:
		y = y
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:05:19) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")or(x[i]!="a"):
		y = y + x[i]
	else:
		y = y
print(y)
-- EXECUTION TIME:
1.08618
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:05:29) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")or(x[i]!="a"):
		y = y + x[i]
	else:
		y = y
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:07:13) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")or(x[i]!="A"):
		y = y + x[i]
	else:
		y = y
print(y)
-- EXECUTION TIME:
0.996717
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computacao-ICOMP-UFAM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:07:22) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")or(x[i]!="A"):
		y = y + x[i]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:07:45) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")and(x[i]!="A"):
		y = y + x[i]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:07:55) 
-- CODE:
from numpy import*
x = input("digite a string: ")
y = ""
for i in range(len(x)):
	if(x[i]!="a")and(x[i]!="A"):
		y = y + x[i]
print(y)
-- EXECUTION TIME:
1.26808
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
